# steamvr-capture

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: nightly-installer.yml
cmake/: steamvr_capture_overlay.vrmanifest.in
driver/steamvr_capture_lighthouse_proxy/: driver.vrdrivermanifest
driver/steamvr_capture_lighthouse_proxy/resources/settings/: default.vrsettings
driver/steamvr_capture_replay/: driver.vrdrivermanifest
driver/steamvr_capture_replay/resources/: driver.vrresources
driver/steamvr_capture_replay/resources/input/: svrcap_tracker_profile.json
driver/steamvr_capture_replay/resources/localization/: localization.json
driver/steamvr_capture_replay/resources/settings/: default.vrsettings
installer/: README.md  SteamVRCapture.iss
src/broker/: broker_app.cpp  broker_app.h  main.cpp
src/capture/: main.cpp  openvr_app_helpers.cpp  openvr_app_helpers.h
src/hotpatch/: dllmain.cpp  hotpatch_runtime.cpp  hotpatch_runtime.h  server_driver_hook.cpp  server_driver_hook.h
src/hotpatch_shared/: hotpatch_protocol.h  replay_bridge_exports.h
src/overlay/: main.cpp  overlay_app.cpp  overlay_app.h
src/proxy_driver/: hmd_driver_factory.cpp  lighthouse_proxy_provider.cpp  lighthouse_proxy_provider.h
src/replay_driver/: device_provider.cpp  device_provider.h  driver_log.cpp  driver_log.h  hmd_driver_factory.cpp  hotpatch_bridge_exports.cpp  replay_tracker_device.cpp  replay_tracker_device.h
src/session/: replay_settings.h  session_format.cpp  session_format.h
src/setup_helper/: main.cpp
unity-example/: .gitignore
unity-example/Assets/SteamVRCapture/: README.txt
unity-example/Assets/SteamVRCapture/Editor/: SteamVRCapture.Editor.asmdef  SteamVrCaptureExampleBootstrap.cs  SteamVrCapturePlaybackEditor.cs  SteamVrCaptureSessionAssetEditor.cs  SteamVrCaptureSessionImporter.cs
unity-example/Assets/SteamVRCapture/Runtime/: SteamVRCapture.Runtime.asmdef  SteamVrCapturePlayback.cs  SteamVrCaptureSessionAsset.cs  SteamVrCaptureSessionParser.cs  SteamVrCaptureTrackedDeviceTarget.cs
unity-example/Assets/SteamVRCapture/Samples/: capture_20260414_231127.svrcap  example_session_v2.svrcap  example_session_v3_calibrated.svrcap  test_app_standing.svrcap
unity-example/Assets/SteamVRCapture/Scenes/: SteamVrCapturePreview.unity
unity-example/ProjectSettings/: ProjectSettings.asset
unity-example/UserSettings/: EditorUserSettings.asset
unity-example/UserSettings/Layouts/: default-2022.dwlt
